Back-end/src/main/java/com/example/error/BadCredentialsException.java
package com.example.error;

public class BadCredentialsException extends RuntimeException {

    public BadCredentialsException(String message){
        super(message);
    }
}
